27/05/2025	11:20	Daniele Chiarion	Add .js code for the admin to add car.
27/05/2025	20:04	Daniele Chiarion	Completed .js code to add items for the admin.
27/05/2025	20:59	Daniele Chiarion	Completed .js code to get the correct carousel starting from the device size.
28/05/2025	08:53	Daniele Chiarion	Add backed part with methods to show cars in the home page based on the user preferences.
28/05/2025	09:05	Daniele Chiarion	Add .js class to do research using ID. 
28/05/2025	18:02	Daniele Chiarion	Completed most sold cars output section.
28/05/2025	18:21	Daniele Chiarion	Completed user advice output section.
28/05/2025	20:00	Daniele Chiarion	Completed brand-show section and custom link to other pages.
29/05/2025	10:36	Daniele Chiarion	Completed .js to manage the button of the cards.
29/05/2025	14:48	Daniele Chiarion	Completed .js for wish-list page.
29/05/2025	17:04	Daniele Chiarion	Add methods to complete the purchase part for the user.
29/05/2025	20:50	Daniele Chiarion	Finished shopping cart-page. It needs to be checked.
29/05/2025	21:23	Daniele Chiarion	Add first part profile page to complete.
30/05/2025	17:11	Daniele Chiarion	Complete .js part to manage the profile page.
30/05/2025	17:55	Daniele Chiarion	Complete .js part for the purchase list of the user.
30/05/2025	21:03	Daniele Chiarion	Complete .js code for car-configurator. 
02/06/2025	17:55	Daniele Chiarion	Fix bug color purchaseList.
02/06/2025	18:10	Daniele Chiarion	Add .js file for car-details tools. 
02/06/2025	21:16	Daniele Chiarion	Started car-details page.
03/06/2025	10:33	Daniele Chiarion	Finished details page for the showroom. 
03/06/2025	11:20	Daniele Chiarion	Completed .js frontend part for the details of a car bought by the user.
03/06/2025	18:49	Daniele Chiarion	Completed .js code for theme page. 
03/06/2025	21:47	Daniele Chiarion	Completed .js for car search.
09/06/2025	16:47	Daniele Chiarion	Add contents in html to add items from .xlsx and .xls files