@@ -328,7 +328,7 @@
           </div>
           <div class="row mb-3">
             <div class="col-12">
-              <h5 class="form-input-section">Aggiungi macchine</h5>
+              <h5 class="form-input-section">Aggiungi Macchine</h5>
             </div>
             <div class="col-md-6">
               <input class="form-control form-input-item" type="file" id="file-spreadsheet-cars" accept=".xlsx,.xls">
